<resources>
    <string name="app_name">Covid19Monitoring</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CountriesStatistics">Countries Statistics</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Recovered">Recovered</string>
    <string name="Deaths">Deaths</string>
    <string name="WorldWideStatistics">Worldwide Statistics</string>
    <string name="notify">Notify me every :</string>
    <string name="onehour">1 hour</string>
    <string name="twohours">2 hours</string>
    <string name="threehours">3 hours</string>
    <string name="fourhours">4 hours</string>
    <string name="oneday">1 day</string>
    <string name="notifyme">Notify Me</string>
    <string name="search_hint">Search by country name</string>

</resources>
